--- a/flag3/flag3.html
+++ b/flag3/flag3.html
@@ -2,151 +2,239 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flag 3 | Base64 Challenge</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SIGNAL_03 | ARTIMAS CTF</title>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Exo+2:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <style>
-        * {
+        :root {
+            --neon-yellow: #facc15;
+            --neon-cyan: #00e5ff;
+            --dark-bg: #03010a;
+            --border: rgba(250, 204, 21, 0.3);
+        }
+
+        *,
+        *::before,
+        *::after {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
 
         body {
+            background: var(--dark-bg);
+            color: #e0f7ff;
+            font-family: 'Exo 2', sans-serif;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #0f172a;
-            font-family: 'Segoe UI', sans-serif;
-            color: #e2e8f0;
+            overflow: hidden;
+            padding: 20px;
+        }
+
+        #bg-canvas {
+            position: fixed;
+            inset: 0;
+            z-index: 0;
+        }
+
+        .container {
+            position: relative;
+            z-index: 2;
+            width: 100%;
+            max-width: 580px;
         }
 
         .card {
-            background: #1e293b;
-            border: 1px solid #334155;
+            background: rgba(10, 8, 0, 0.9);
+            border: 1px solid var(--border);
             border-radius: 14px;
-            padding: 52px 60px;
+            padding: 40px;
             text-align: center;
-            box-shadow: 0 8px 40px rgba(0, 0, 0, 0.5);
-            max-width: 560px;
-            width: 90%;
+            box-shadow: 0 0 40px rgba(250, 204, 21, 0.1);
+            backdrop-filter: blur(10px);
         }
 
-        h1 {
+        .eyebrow {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.72rem;
+            letter-spacing: 5px;
+            color: #4a5568;
+            text-transform: uppercase;
+            margin-bottom: 14px;
+        }
+
+        .title {
+            font-family: 'Share Tech Mono', monospace;
             font-size: 1.7rem;
-            color: #f1f5f9;
+            color: var(--neon-yellow);
+            text-shadow: 0 0 10px rgba(250, 204, 21, 0.5);
             margin-bottom: 10px;
         }
 
         .subtitle {
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             color: #64748b;
-            margin-bottom: 36px;
+            line-height: 1.6;
+            margin-bottom: 32px;
         }
 
-        .label {
-            font-size: 0.75rem;
-            letter-spacing: 0.12em;
+        .signal-label {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.7rem;
+            letter-spacing: 4px;
+            color: var(--neon-yellow);
             text-transform: uppercase;
-            color: #475569;
-            margin-bottom: 10px;
+            margin-bottom: 12px;
         }
 
         .encoded-box {
-            background: #0f172a;
-            border: 1px solid #334155;
+            background: rgba(250, 204, 21, 0.05);
+            border: 1px solid rgba(250, 204, 21, 0.2);
             border-radius: 10px;
-            padding: 18px 24px;
-            font-family: 'Courier New', monospace;
+            padding: 20px 24px;
+            font-family: 'Share Tech Mono', monospace;
             font-size: 0.95rem;
-            color: #facc15;
+            color: var(--neon-yellow);
             word-break: break-all;
-            letter-spacing: 0.03em;
+            line-height: 1.6;
             cursor: text;
             user-select: all;
+            letter-spacing: .04em;
+            transition: border-color .3s;
         }
 
-        .hint {
-            margin-top: 28px;
-            background: #172033;
-            border-left: 3px solid #3b82f6;
+        .encoded-box:hover {
+            border-color: var(--neon-yellow);
+            box-shadow: 0 0 15px rgba(250, 204, 21, 0.15);
+        }
+
+        .btn {
+            margin-top: 18px;
+            background: transparent;
+            border: 1px solid rgba(250, 204, 21, 0.4);
             border-radius: 6px;
-            padding: 12px 16px;
-            text-align: left;
-            font-size: 0.85rem;
-            color: #93c5fd;
-            line-height: 1.6;
-        }
-
-        .hint span {
-            display: block;
-            font-size: 0.75rem;
-            text-transform: uppercase;
-            letter-spacing: 0.1em;
-            color: #3b82f6;
-            margin-bottom: 4px;
-            font-weight: 700;
-        }
-
-        .copy-btn {
-            margin-top: 20px;
-            background: #1d4ed8;
-            color: #eff6ff;
-            border: none;
-            border-radius: 8px;
             padding: 10px 28px;
-            font-size: 0.9rem;
+            color: var(--neon-yellow);
+            font-family: 'Exo 2', sans-serif;
+            font-size: 0.85rem;
+            font-weight: 700;
+            letter-spacing: 2px;
+            text-transform: uppercase;
             cursor: pointer;
-            transition: background 0.2s;
+            transition: all .3s;
         }
 
-        .copy-btn:hover {
-            background: #2563eb;
+        .btn:hover {
+            background: rgba(250, 204, 21, 0.08);
+            border-color: var(--neon-yellow);
+            box-shadow: 0 0 12px rgba(250, 204, 21, 0.2);
         }
 
-        .copy-btn:active {
-            background: #1e40af;
-        }
-
-        .copied-msg {
-            display: none;
-            margin-top: 10px;
+        .copied {
+            font-family: 'Share Tech Mono', monospace;
             font-size: 0.8rem;
-            color: #4ade80;
+            color: #00ff88;
+            margin-top: 10px;
+            min-height: 1em;
+        }
+
+        .hint-block {
+            margin-top: 28px;
+            background: rgba(250, 204, 21, 0.04);
+            border-left: 3px solid rgba(250, 204, 21, 0.4);
+            border-radius: 6px;
+            padding: 14px 18px;
+            text-align: left;
+        }
+
+        .hint-label {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.7rem;
+            letter-spacing: 3px;
+            color: rgba(250, 204, 21, 0.6);
+            text-transform: uppercase;
+            display: block;
+            margin-bottom: 8px;
+        }
+
+        .hint-text {
+            font-size: 0.85rem;
+            color: #94a3b8;
+            line-height: 1.6;
         }
     </style>
 </head>
 
 <body>
-    <div class="card">
-        <h1>🔐 Flag 3 — Decode Me!</h1>
-        <p class="subtitle">Something has been encoded. Can you figure out what it says?</p>
+    <canvas id="bg-canvas"></canvas>
+    <div class="container">
+        <div class="card">
+            <div class="eyebrow">// Intercepted Transmission</div>
+            <div class="title">🔐 Decode the Signal</div>
+            <p class="subtitle">An encoded message was intercepted mid-transmission. The contents are scrambled but
+                decodable. Can you reverse it?</p>
 
-        <p class="label">Encoded String</p>
-        <div class="encoded-box" id="encodedText">
-            QVJUSUlBU3tiYXNlNjRfZGVjb2RlZF9zdWNjZXNzZnVsbHl9
-        </div>
+            <div class="signal-label">// Encoded Payload</div>
+            <div class="encoded-box" id="encodedText">QVJUSU1BU3tiYXNlNjRfZGVjb2RlZF9zdWNjZXNzZnVsbHl9</div>
+            <button class="btn" onclick="doCopy()">📋 Copy Signal</button>
+            <div class="copied" id="copied"></div>
 
-        <button class="copy-btn" onclick="copyText()">📋 Copy String</button>
-        <p class="copied-msg" id="copiedMsg">✅ Copied to clipboard!</p>
-
-        <div class="hint">
-            <span>💡 Hint</span>
-            This encoding scheme uses A–Z, a–z, 0–9, +, and / characters.
-            Most CTF tools and online decoders support it natively.
+            <div class="hint-block">
+                <span class="hint-label">💡 Analyst Note</span>
+                <span class="hint-text">This encoding scheme uses A–Z, a–z, 0–9, + and / characters. Most CTF tools and
+                    online decoders support it natively.</span>
+            </div>
         </div>
     </div>
-
+    <!-- Submit Strip -->
+    <div
+        style="max-width:580px;margin:18px auto 0;background:rgba(8,4,22,0.9);border:1px solid rgba(250,204,21,0.15);border-radius:12px;padding:18px;font-family:'Share Tech Mono',monospace;position:relative;z-index:2;">
+        <span
+            style="font-size:0.68rem;letter-spacing:3px;color:#4a5568;text-transform:uppercase;display:block;margin-bottom:10px;">//
+            Submit Flag 3</span>
+        <div style="display:flex;gap:8px;">
+            <input type="text" id="fi3" placeholder="ARTIMAS{...}" autocomplete="off" spellcheck="false"
+                style="flex:1;background:rgba(250,204,21,0.04);border:1px solid rgba(250,204,21,0.15);border-radius:6px;padding:10px 14px;color:white;font-family:'Share Tech Mono',monospace;font-size:0.82rem;outline:none;">
+            <button onclick="submitFlag3()"
+                style="background:linear-gradient(135deg,#facc15,#f59e0b);border:none;border-radius:6px;padding:10px 18px;color:black;font-family:'Exo 2',sans-serif;font-weight:700;font-size:0.8rem;letter-spacing:1px;text-transform:uppercase;cursor:pointer;">Submit</button>
+        </div>
+        <div id="fb3" style="margin-top:8px;font-size:0.75rem;min-height:1.1em;"></div>
+        <a href="../index.html"
+            style="display:inline-block;margin-top:12px;font-size:0.72rem;letter-spacing:2px;color:#4a5568;text-decoration:none;border:1px solid #1e293b;border-radius:6px;padding:6px 16px;">←
+            Return to Hub</a>
+    </div>
     <script>
-        function copyText() {
-            const text = document.getElementById('encodedText').innerText.trim();
-            navigator.clipboard.writeText(text).then(() => {
-                const msg = document.getElementById('copiedMsg');
-                msg.style.display = 'block';
-                setTimeout(() => msg.style.display = 'none', 2000);
-            });
+
+        function doCopy() { navigator.clipboard.writeText(document.getElementById('encodedText').innerText.trim()); const e = document.getElementById('copied'); e.textContent = '✅ Copied to clipboard!'; setTimeout(() => e.textContent = '', 2000); }
+        const canvas = document.getElementById('bg-canvas'), ctx = canvas.getContext('2d');
+        let w, h, p = []; function resize() { w = canvas.width = window.innerWidth; h = canvas.height = window.innerHeight; }
+        window.addEventListener('resize', resize); resize();
+        for (let i = 0; i < 50; i++)p.push({ x: Math.random() * w, y: Math.random() * h, vx: Math.random() * .4 - .2, vy: Math.random() * .4 - .2 });
+        function draw() { ctx.clearRect(0, 0, w, h); p.forEach(q => { q.x += q.vx; q.y += q.vy; if (q.x < 0) q.x = w; if (q.x > w) q.x = 0; if (q.y < 0) q.y = h; if (q.y > h) q.y = 0; ctx.beginPath(); ctx.arc(q.x, q.y, 1, 0, Math.PI * 2); ctx.fillStyle = 'rgba(250,204,21,0.2)'; ctx.fill(); }); requestAnimationFrame(draw); }
+        draw();
+        // ── Flag Submission ──
+        async function submitFlag3() {
+            const val = document.getElementById('fi3').value.trim();
+            const fb = document.getElementById('fb3');
+            if (!val) { fb.style.color = '#ff3e3e'; fb.textContent = 'Enter the flag first'; return; }
+            fb.style.color = '#00e5ff'; fb.textContent = 'Verifying...';
+            const res = await fetch('/api/scores/flag', {
+                method: 'POST', headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ answer: val })
+            }).then(r => r.json());
+            if (res.ok) {
+                fb.style.color = '#00ff88'; fb.textContent = '✅ CORRECT! FLAG 3 CAPTURED — Returning...';
+                setTimeout(() => { window.location.href = '/index.html'; }, 1200);
+            } else if (res.alreadySolved) {
+                fb.style.color = '#fbbf24'; fb.textContent = '⚡ Already captured — Returning...';
+                setTimeout(() => { window.location.href = '/index.html'; }, 1200);
+            } else { fb.style.color = '#ff3e3e'; fb.textContent = '⚠ Invalid flag — try again'; }
         }
+        document.addEventListener('keydown', e => { if (e.key === 'Enter' && document.activeElement.id === 'fi3') submitFlag3(); });
     </script>
 </body>
 
