--- a/flag6/mock_profile.html
+++ b/flag6/mock_profile.html
@@ -148,7 +148,7 @@
                 --- Notes ---
                 If you found this, you're on the right track. Keep digging.
 
-                <span class="flag-line">Flag: ARTIMAS{osint_profile_traced}</span>
+                <span class="flag-line">Flag: ARTIMAS{0s1nt_pr0f1l3_tr4c3d}</span>
 
                 Good job tracing my profile. Now go find the next one 🚩
             </div>
