--- a/flag1/Flag 1.html
+++ b/flag1/Flag 1.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CTF Challenge</title>
+  <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Exo+2:wght@400;700&display=swap"
+    rel="stylesheet">
   <style>
     body {
       margin: 0;
       min-height: 100vh;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
-      background: #0f172a;
-      font-family: 'Segoe UI', sans-serif;
-      color: #e2e8f0;
+      background: #03010a;
+      font-family: 'Exo 2', sans-serif;
+      color: #e0f7ff;
+      padding: 20px;
     }
 
     .card {
-      background: #1e293b;
-      border: 1px solid #334155;
-      border-radius: 12px;
+      background: rgba(10, 5, 30, 0.92);
+      border: 1px solid rgba(0, 229, 255, 0.2);
+      border-radius: 14px;
       padding: 48px 60px;
       text-align: center;
-      box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 0 40px rgba(0, 229, 255, 0.08);
+      max-width: 480px;
+      width: 100%;
     }
 
     h1 {
@@ -36,8 +43,103 @@
       color: #94a3b8;
       margin: 0;
     }
+
+    /* Submit strip */
+    .submit-strip {
+      max-width: 480px;
+      width: 100%;
+      margin-top: 20px;
+      background: rgba(8, 4, 22, 0.9);
+      border: 1px solid rgba(0, 229, 255, 0.15);
+      border-radius: 12px;
+      padding: 20px;
+    }
+
+    .strip-label {
+      font-family: 'Share Tech Mono', monospace;
+      font-size: 0.68rem;
+      letter-spacing: 3px;
+      color: #4a5568;
+      text-transform: uppercase;
+      display: block;
+      margin-bottom: 10px;
+    }
+
+    .strip-row {
+      display: flex;
+      gap: 8px;
+    }
+
+    .flag-input {
+      flex: 1;
+      background: rgba(0, 229, 255, 0.04);
+      border: 1px solid rgba(0, 229, 255, 0.15);
+      border-radius: 6px;
+      padding: 10px 14px;
+      color: white;
+      font-family: 'Share Tech Mono', monospace;
+      font-size: 0.82rem;
+      outline: none;
+    }
+
+    .flag-input:focus {
+      border-color: #00e5ff;
+    }
+
+    .flag-input::placeholder {
+      color: #2d3748;
+    }
+
+    .submit-btn {
+      background: linear-gradient(135deg, #00e5ff, #00ff88);
+      border: none;
+      border-radius: 6px;
+      padding: 10px 18px;
+      color: black;
+      font-family: 'Exo 2', sans-serif;
+      font-weight: 700;
+      font-size: 0.8rem;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      cursor: pointer;
+    }
+
+    .feedback {
+      margin-top: 8px;
+      font-family: 'Share Tech Mono', monospace;
+      font-size: 0.75rem;
+      min-height: 1.1em;
+    }
+
+    .fb-err {
+      color: #ff3e3e;
+    }
+
+    .fb-ok {
+      color: #00ff88;
+    }
+
+    .hub-btn {
+      display: inline-block;
+      margin-top: 14px;
+      font-family: 'Share Tech Mono', monospace;
+      font-size: 0.72rem;
+      letter-spacing: 2px;
+      color: #4a5568;
+      text-decoration: none;
+      border: 1px solid #1e293b;
+      border-radius: 6px;
+      padding: 7px 16px;
+      transition: color 0.2s, border-color 0.2s;
+    }
+
+    .hub-btn:hover {
+      color: #00e5ff;
+      border-color: rgba(0, 229, 255, 0.3);
+    }
   </style>
 </head>
+
 <body>
 
   <!-- FLAG: ARTIMAS{view_source_reveals_secret} -->
@@ -47,5 +149,43 @@
     <p>Good luck, and may the best hacker win!</p>
   </div>
 
+  <div class="submit-strip">
+    <span class="strip-label">// Submit Flag 1</span>
+    <div class="strip-row">
+      <input type="text" class="flag-input" id="flag-input" placeholder="ARTIMAS{...}" autocomplete="off"
+        spellcheck="false">
+      <button class="submit-btn" onclick="submitFlag()">Submit</button>
+    </div>
+    <div class="feedback" id="feedback"></div>
+    <a class="hub-btn" href="../index.html">← Return to Hub</a>
+  </div>
+
+  <script>
+    async function submitFlag() {
+      const val = document.getElementById('flag-input').value.trim();
+      const fb = document.getElementById('feedback');
+      if (!val) { fb.className = 'feedback fb-err'; fb.textContent = 'Enter a flag first'; return; }
+      fb.className = 'feedback'; fb.style.color = '#00e5ff'; fb.textContent = 'Verifying...';
+      const res = await fetch('/api/scores/flag', {
+        method: 'POST', headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ answer: val })
+      }).then(r => r.json());
+      if (res.ok) {
+        fb.className = 'feedback fb-ok';
+        fb.textContent = '✅ CORRECT! FLAG 1 CAPTURED — Returning to hub...';
+        setTimeout(() => { window.location.href = '/index.html'; }, 1200);
+      } else if (res.alreadySolved) {
+        fb.className = 'feedback fb-ok';
+        fb.textContent = '⚡ Already captured — Returning...';
+        setTimeout(() => { window.location.href = '/index.html'; }, 1200);
+      } else {
+        fb.className = 'feedback fb-err';
+        fb.textContent = '⚠ Invalid flag — try again';
+      }
+    }
+    document.getElementById('flag-input').addEventListener('keydown', e => { if (e.key === 'Enter') submitFlag(); });
+  </script>
+
 </body>
+
 </html>
