--- a/flag10/index.html
+++ b/flag10/index.html
@@ -2,131 +2,277 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flag 10 | Simple Notes Challenge</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ENDGAME_10 | ARTIMAS CTF</title>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Exo+2:wght@300;400;700;900&display=swap"
+        rel="stylesheet">
     <style>
-        * {
+        :root {
+            --neon-cyan: #00e5ff;
+            --neon-green: #00ff88;
+            --dark-bg: #03010a;
+            --border: rgba(0, 229, 255, 0.3);
+        }
+
+        *,
+        *::before,
+        *::after {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
 
         body {
+            background: var(--dark-bg);
+            color: #e0f7ff;
+            font-family: 'Exo 2', sans-serif;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #0f172a;
-            font-family: 'Segoe UI', sans-serif;
-            color: #e2e8f0;
-            padding: 30px 16px;
+            overflow: hidden;
+            padding: 30px 20px;
+        }
+
+        #bg-canvas {
+            position: fixed;
+            inset: 0;
+            z-index: 0;
+        }
+
+        .container {
+            position: relative;
+            z-index: 2;
+            width: 100%;
+            max-width: 580px;
         }
 
         .card {
-            background: #1e293b;
-            border: 1px solid #334155;
+            background: rgba(3, 1, 20, 0.93);
+            border: 1px solid var(--border);
             border-radius: 14px;
-            padding: 48px 56px;
+            padding: 44px;
             text-align: center;
-            box-shadow: 0 8px 40px rgba(0, 0, 0, 0.5);
-            max-width: 540px;
-            width: 100%;
+            box-shadow: 0 0 60px rgba(0, 229, 255, 0.12), 0 0 120px rgba(0, 255, 136, 0.05);
+            backdrop-filter: blur(12px);
+            position: relative;
+            overflow: hidden;
         }
 
-        h1 {
-            font-size: 1.7rem;
-            color: #f1f5f9;
+        .card::before {
+            content: 'FINAL CHALLENGE';
+            position: absolute;
+            top: 14px;
+            right: 18px;
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.6rem;
+            color: var(--neon-green);
+            letter-spacing: 3px;
+            opacity: .5;
+        }
+
+        .gradient-line {
+            height: 2px;
+            background: linear-gradient(90deg, transparent, var(--neon-cyan), var(--neon-green), transparent);
+            margin-bottom: 30px;
+            border-radius: 2px;
+        }
+
+        .eyebrow {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.7rem;
+            letter-spacing: 5px;
+            color: #4a5568;
+            text-transform: uppercase;
+            margin-bottom: 14px;
+        }
+
+        .title {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 1.8rem;
+            background: linear-gradient(135deg, var(--neon-cyan), var(--neon-green));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
             margin-bottom: 10px;
         }
 
         .subtitle {
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             color: #64748b;
-            margin-bottom: 34px;
             line-height: 1.6;
-        }
-
-        .download-btn {
-            display: inline-block;
-            background: #0891b2;
-            color: #ecfeff;
-            text-decoration: none;
-            border-radius: 8px;
-            padding: 12px 32px;
-            font-size: 0.95rem;
-            font-weight: 600;
             margin-bottom: 30px;
-            transition: background 0.2s;
         }
 
-        .download-btn:hover {
-            background: #06b6d4;
+        .btn {
+            display: inline-block;
+            background: linear-gradient(135deg, rgba(0, 229, 255, .1), rgba(0, 255, 136, .1));
+            border: 1px solid rgba(0, 229, 255, 0.4);
+            border-radius: 6px;
+            padding: 13px 34px;
+            color: var(--neon-cyan);
+            font-family: 'Exo 2', sans-serif;
+            font-size: 0.85rem;
+            font-weight: 700;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            text-decoration: none;
+            margin-bottom: 28px;
+            transition: all .3s;
         }
 
-        .hint {
-            background: #083344;
-            border-left: 3px solid #06b6d4;
+        .btn:hover {
+            background: linear-gradient(135deg, rgba(0, 229, 255, .15), rgba(0, 255, 136, .15));
+            box-shadow: 0 0 20px rgba(0, 229, 255, 0.2);
+        }
+
+        .hint-block {
+            background: rgba(0, 229, 255, 0.04);
+            border-left: 3px solid rgba(0, 229, 255, 0.35);
             border-radius: 6px;
             padding: 14px 18px;
             text-align: left;
-            font-size: 0.85rem;
-            color: #a5f3fc;
-            line-height: 1.7;
         }
 
-        .hint span {
-            display: block;
-            font-size: 0.75rem;
+        .hint-label {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.7rem;
+            letter-spacing: 3px;
+            color: rgba(0, 229, 255, .5);
             text-transform: uppercase;
-            letter-spacing: 0.1em;
-            color: #06b6d4;
-            margin-bottom: 5px;
-            font-weight: 700;
+            display: block;
+            margin-bottom: 8px;
         }
 
-        .tools {
-            margin-top: 20px;
+        .hint-text {
+            font-size: 0.85rem;
+            color: #94a3b8;
+            line-height: 1.6;
+        }
+
+        .tags {
             display: flex;
             justify-content: center;
             gap: 10px;
             flex-wrap: wrap;
+            margin-top: 18px;
         }
 
-        .tool-tag {
-            background: #0f172a;
-            border: 1px solid #334155;
-            border-radius: 999px;
+        .tag {
+            background: rgba(0, 229, 255, 0.07);
+            border: 1px solid rgba(0, 229, 255, 0.2);
+            border-radius: 20px;
             padding: 5px 14px;
-            font-size: 0.78rem;
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.75rem;
             color: #94a3b8;
-            font-family: monospace;
+        }
+
+        .badge {
+            display: inline-block;
+            background: rgba(0, 255, 136, 0.1);
+            border: 1px solid rgba(0, 255, 136, 0.3);
+            border-radius: 20px;
+            padding: 6px 16px;
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.75rem;
+            color: var(--neon-green);
+            letter-spacing: 2px;
+            margin-bottom: 22px;
         }
     </style>
 </head>
 
 <body>
-    <div class="card">
-        <h1>📝 Flag 10 — Plain Sight</h1>
-        <p class="subtitle">
-            A simple text file containing the final flag.<br>
-            No encryption, no metadata, just plain investigation.
-        </p>
-        <a class="download-btn" href="notes.txt" download="notes.txt">
-            📄 Download notes.txt
-        </a>
-        <div class="hint">
-            <span>💡 Hint</span>
-            Always read the documents carefully.
-            Important information is often hidden in plain sight,
-            amongst daily reminders and mundane lists.
-        </div>
-        <div class="tools">
-            <span class="tool-tag">Notepad</span>
-            <span class="tool-tag">grep</span>
-            <span class="tool-tag">Reading</span>
+    <canvas id="bg-canvas"></canvas>
+    <div class="container">
+        <div class="card">
+            <div class="gradient-line"></div>
+            <div class="eyebrow">// Final Challenge</div>
+            <div class="badge">ENDGAME · STAGE 10</div>
+            <div class="title">📡 Signal in the Headers</div>
+            <p class="subtitle">The server is sending a hidden signal with every request to this page. It's not in the
+                HTML, the CSS, or the images. You'll need to look at the 'handshake' between the browser and the server.
+            </p>
+
+            <div class="hint-block">
+                <span class="hint-label">💡 Master Analyst Note</span>
+                <span class="hint-text">A web page speaks twice—
+                    once in what it shows,
+                    and once in what it mutters behind the curtain.
+
+                    Open the machinery.
+                    Let the page reload under scrutiny,
+                    watch the quiet exchange of headers and intent.
+                    Most are ordinary courtesies,
+                    but one will hesitate—
+                    a line that doesn’t belong,
+                    a secret slipped into protocol.
+
+                    The flag will not shout from the body.
+                    It will linger in the margins of the response,
+                    where servers confess
+                    only to those who bother to listen.</span>
+            </div>
+            <div class="tags">
+                <span class="tag">Network Tab</span>
+                <span class="tag">HTTP Headers</span>
+                <span class="tag">Response Data</span>
+            </div>
         </div>
     </div>
+    <!-- Submit Strip -->
+    <div
+        style="max-width:580px;margin:18px auto 0;background:rgba(8,4,22,0.9);border:1px solid rgba(0,229,255,0.15);border-radius:12px;padding:18px;font-family:'Share Tech Mono',monospace;position:relative;z-index:2;">
+        <span
+            style="font-size:0.68rem;letter-spacing:3px;color:#4a5568;text-transform:uppercase;display:block;margin-bottom:10px;">//
+            Submit Flag 10 — ENDGAME</span>
+        <div style="display:flex;gap:8px;">
+            <input type="text" id="fi10" placeholder="ARTIMAS{...}" autocomplete="off" spellcheck="false"
+                style="flex:1;background:rgba(0,229,255,0.04);border:1px solid rgba(0,229,255,0.15);border-radius:6px;padding:10px 14px;color:white;font-family:'Share Tech Mono',monospace;font-size:0.82rem;outline:none;">
+            <button onclick="submitFlag10()"
+                style="background:linear-gradient(135deg,#00e5ff,#00ff88);border:none;border-radius:6px;padding:10px 18px;color:black;font-family:'Exo 2',sans-serif;font-weight:700;font-size:0.8rem;letter-spacing:1px;text-transform:uppercase;cursor:pointer;">Submit</button>
+        </div>
+        <div id="fb10" style="margin-top:8px;font-size:0.75rem;min-height:1.1em;"></div>
+        <a href="../index.html"
+            style="display:inline-block;margin-top:12px;font-size:0.72rem;letter-spacing:2px;color:#4a5568;text-decoration:none;border:1px solid #1e293b;border-radius:6px;padding:6px 16px;">←
+            Return to Hub</a>
+    </div>
+    <script>
+        const canvas = document.getElementById('bg-canvas'), ctx = canvas.getContext('2d');
+        let w, h, p = []; function resize() { w = canvas.width = window.innerWidth; h = canvas.height = window.innerHeight; }
+        window.addEventListener('resize', resize); resize();
+        for (let i = 0; i < 70; i++)p.push({ x: Math.random() * w, y: Math.random() * h, vx: Math.random() * .5 - .25, vy: Math.random() * .5 - .25, color: Math.random() > .5 ? '0,229,255' : '0,255,136' });
+        function draw() {
+            ctx.clearRect(0, 0, w, h);
+            for (let i = 0; i < p.length; i++) {
+                const q = p[i]; q.x += q.vx; q.y += q.vy; if (q.x < 0) q.x = w; if (q.x > w) q.x = 0; if (q.y < 0) q.y = h; if (q.y > h) q.y = 0; ctx.beginPath(); ctx.arc(q.x, q.y, 1.1, 0, Math.PI * 2); ctx.fillStyle = `rgba(${q.color},0.2)`; ctx.fill();
+                for (let j = i + 1; j < p.length; j++) { const r = p[j], dx = q.x - r.x, dy = q.y - r.y, d = Math.sqrt(dx * dx + dy * dy); if (d < 100) { ctx.beginPath(); ctx.moveTo(q.x, q.y); ctx.lineTo(r.x, r.y); ctx.strokeStyle = `rgba(0,229,255,${0.08 * (1 - d / 100)})`; ctx.lineWidth = 0.5; ctx.stroke(); } }
+            }
+            requestAnimationFrame(draw);
+        }
+        draw();
+        // ── Flag Submission ──
+        async function submitFlag10() {
+            const val = document.getElementById('fi10').value.trim();
+            const fb = document.getElementById('fb10');
+            if (!val) { fb.style.color = '#ff3e3e'; fb.textContent = 'Enter the flag first'; return; }
+            fb.style.color = '#00e5ff'; fb.textContent = 'Verifying...';
+            const res = await fetch('/api/scores/flag', {
+                method: 'POST', headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ answer: val })
+            }).then(r => r.json());
+            if (res.ok) {
+                fb.style.color = '#00ff88'; fb.textContent = '✅ CORRECT! FLAG 10 CAPTURED — 🏆 ALL DONE! Returning...';
+                setTimeout(() => { window.location.href = '/index.html'; }, 1500);
+            } else if (res.alreadySolved) {
+                fb.style.color = '#fbbf24'; fb.textContent = '⚡ Already captured — Returning...';
+                setTimeout(() => { window.location.href = '/index.html'; }, 1200);
+            } else { fb.style.color = '#ff3e3e'; fb.textContent = '⚠ Invalid flag — try again'; }
+        }
+        document.addEventListener('keydown', e => { if (e.key === 'Enter' && document.activeElement.id === 'fi10') submitFlag10(); });
+    </script>
 </body>
 
 </html>
