--- a/flag2/index.html
+++ b/flag2/index.html
@@ -2,69 +2,139 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Welcome | CTF Challenge</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>GATEWAY_02 | ARTIMAS CTF</title>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Exo+2:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <style>
-        * {
-            box-sizing: border-box;
-            margin: 0;
-            padding: 0;
+        :root {
+            --neon-cyan: #00e5ff;
+            --neon-purple: #bf00ff;
+            --dark-bg: #03010a;
+            --card-bg: rgba(10, 5, 30, 0.85);
+            --border: rgba(0, 229, 255, 0.2);
         }
 
         body {
+            background-color: var(--dark-bg);
+            color: #e0f7ff;
+            font-family: 'Exo 2', sans-serif;
+            margin: 0;
             min-height: 100vh;
             display: flex;
+            flex-direction: column;
             align-items: center;
             justify-content: center;
-            background: #0f172a;
-            font-family: 'Segoe UI', sans-serif;
-            color: #e2e8f0;
+            overflow: hidden;
         }
 
-        .card {
-            background: #1e293b;
-            border: 1px solid #334155;
-            border-radius: 14px;
-            padding: 52px 64px;
+        #bg-canvas {
+            position: fixed;
+            inset: 0;
+            z-index: 0;
+        }
+
+        .container {
+            position: relative;
+            z-index: 2;
             text-align: center;
-            box-shadow: 0 8px 40px rgba(0, 0, 0, 0.5);
-            max-width: 480px;
+            padding: 20px;
+        }
+
+        .vault-icon {
+            font-size: 4rem;
+            margin-bottom: 20px;
+            filter: drop-shadow(0 0 10px var(--neon-purple));
+        }
+
+        .access-denied {
+            background: var(--card-bg);
+            border: 1px solid rgba(255, 62, 62, 0.3);
+            border-radius: 12px;
+            padding: 40px;
+            max-width: 500px;
+            box-shadow: 0 0 40px rgba(255, 62, 62, 0.1);
+            backdrop-filter: blur(10px);
         }
 
         h1 {
-            font-size: 2rem;
-            color: #f1f5f9;
-            margin-bottom: 14px;
+            font-family: 'Share Tech Mono', monospace;
+            color: #ff3e3e;
+            font-size: 1.8rem;
+            margin-bottom: 15px;
+            letter-spacing: 2px;
         }
 
         p {
-            font-size: 1rem;
             color: #94a3b8;
             line-height: 1.6;
+            margin-bottom: 25px;
         }
 
-        .badge {
+        .btn {
             display: inline-block;
-            margin-top: 24px;
-            background: #0f172a;
-            border: 1px solid #334155;
-            border-radius: 999px;
-            padding: 6px 16px;
-            font-size: 0.78rem;
-            color: #64748b;
-            letter-spacing: 0.05em;
+            padding: 12px 30px;
+            border: 1px solid #ff3e3e;
+            border-radius: 4px;
+            color: #ff3e3e;
+            text-decoration: none;
+            font-family: 'Share Tech Mono', monospace;
+            font-weight: 700;
+            transition: all 0.3s;
+        }
+
+        .btn:hover {
+            background: rgba(255, 62, 62, 0.1);
+            box-shadow: 0 0 15px rgba(255, 62, 62, 0.3);
+        }
+
+        .hint-text {
+            margin-top: 30px;
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.8rem;
+            color: #4a5568;
         }
     </style>
 </head>
 
 <body>
-    <div class="card">
-        <h1>🚩 Welcome to the CTF Event</h1>
-        <p>This is a beginner-friendly Capture The Flag challenge.<br>Explore carefully — flags are hidden in unexpected
-            places!</p>
-        <span class="badge">Good luck, hacker 🕵️</span>
+    <canvas id="bg-canvas"></canvas>
+
+    <div class="container">
+        <div class="vault-icon">🔒</div>
+        <div class="access-denied">
+            <h1>ACCESS RESTRICTED</h1>
+            <p>Connection from unauthorized external IP detected. Access to the internal core is strictly forbidden.</p>
+            <p>Your session ID has been logged for investigative purposes.</p>
+            <a href="#" class="btn" onclick="alert('Connection Terminated.')">LOGOUT</a>
+        </div>
+        <div class="hint-text">
+            "Even web crawlers have boundaries they aren't supposed to cross..."
+        </div>
     </div>
+
+    <script>
+        /* Particle Background */
+        const canvas = document.getElementById('bg-canvas');
+        const ctx = canvas.getContext('2d');
+        let w, h, particles = [];
+        function resize() { w = canvas.width = window.innerWidth; h = canvas.height = window.innerHeight; }
+        window.addEventListener('resize', resize);
+        resize();
+        for (let i = 0; i < 40; i++) particles.push({ x: Math.random() * w, y: Math.random() * h, vx: Math.random() * 0.3 - 0.15, vy: Math.random() * 0.3 - 0.15 });
+        function animate() {
+            ctx.clearRect(0, 0, w, h);
+            ctx.fillStyle = 'rgba(191, 0, 255, 0.2)';
+            particles.forEach(p => {
+                p.x += p.vx; p.y += p.vy;
+                if (p.x < 0) p.x = w; if (p.x > w) p.x = 0; if (p.y < 0) p.y = h; if (p.y > h) p.y = 0;
+                ctx.beginPath(); ctx.arc(p.x, p.y, 1, 0, Math.PI * 2); ctx.fill();
+            });
+            requestAnimationFrame(animate);
+        }
+        animate();
+    </script>
 </body>
 
 </html>
