--- a/flag7/index.html
+++ b/flag7/index.html
@@ -2,132 +2,224 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flag 7 | Forensics Challenge</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FORENSICS_07 | ARTIMAS CTF</title>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Exo+2:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <style>
-        * {
+        :root {
+            --neon-amber: #fbbf24;
+            --dark-bg: #03010a;
+            --border: rgba(251, 191, 36, 0.3);
+        }
+
+        *,
+        *::before,
+        *::after {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
 
         body {
+            background: var(--dark-bg);
+            color: #e0f7ff;
+            font-family: 'Exo 2', sans-serif;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #0f172a;
-            font-family: 'Segoe UI', sans-serif;
-            color: #e2e8f0;
-            padding: 30px 16px;
+            overflow: hidden;
+            padding: 30px 20px;
+        }
+
+        #bg-canvas {
+            position: fixed;
+            inset: 0;
+            z-index: 0;
+        }
+
+        .container {
+            position: relative;
+            z-index: 2;
+            width: 100%;
+            max-width: 580px;
         }
 
         .card {
-            background: #1e293b;
-            border: 1px solid #334155;
+            background: rgba(15, 10, 0, 0.92);
+            border: 1px solid var(--border);
             border-radius: 14px;
-            padding: 48px 56px;
+            padding: 44px;
             text-align: center;
-            box-shadow: 0 8px 40px rgba(0, 0, 0, 0.5);
-            max-width: 560px;
-            width: 100%;
+            box-shadow: 0 0 40px rgba(251, 191, 36, 0.08);
+            backdrop-filter: blur(12px);
         }
 
-        h1 {
+        .eyebrow {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.7rem;
+            letter-spacing: 5px;
+            color: #4a5568;
+            text-transform: uppercase;
+            margin-bottom: 14px;
+        }
+
+        .title {
+            font-family: 'Share Tech Mono', monospace;
             font-size: 1.7rem;
-            color: #f1f5f9;
+            color: var(--neon-amber);
+            text-shadow: 0 0 10px rgba(251, 191, 36, 0.4);
             margin-bottom: 10px;
         }
 
         .subtitle {
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             color: #64748b;
-            margin-bottom: 34px;
             line-height: 1.6;
-        }
-
-        .download-btn {
-            display: inline-block;
-            background: #b45309;
-            color: #fef3c7;
-            text-decoration: none;
-            border-radius: 8px;
-            padding: 12px 32px;
-            font-size: 0.95rem;
-            font-weight: 600;
             margin-bottom: 30px;
-            transition: background 0.2s;
         }
 
-        .download-btn:hover {
-            background: #d97706;
+        .btn {
+            display: inline-block;
+            background: transparent;
+            border: 1px solid rgba(251, 191, 36, 0.4);
+            border-radius: 6px;
+            padding: 13px 34px;
+            color: var(--neon-amber);
+            font-family: 'Exo 2', sans-serif;
+            font-size: 0.85rem;
+            font-weight: 700;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            text-decoration: none;
+            margin-bottom: 28px;
+            transition: all .3s;
         }
 
-        .hint {
-            background: #1c1408;
-            border-left: 3px solid #d97706;
+        .btn:hover {
+            background: rgba(251, 191, 36, 0.07);
+            box-shadow: 0 0 14px rgba(251, 191, 36, 0.18);
+        }
+
+        .hint-block {
+            background: rgba(251, 191, 36, 0.04);
+            border-left: 3px solid rgba(251, 191, 36, 0.35);
             border-radius: 6px;
             padding: 14px 18px;
             text-align: left;
-            font-size: 0.85rem;
-            color: #fcd34d;
-            line-height: 1.7;
         }
 
-        .hint span {
-            display: block;
-            font-size: 0.75rem;
+        .hint-label {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.7rem;
+            letter-spacing: 3px;
+            color: rgba(251, 191, 36, .5);
             text-transform: uppercase;
-            letter-spacing: 0.1em;
-            color: #d97706;
-            margin-bottom: 5px;
-            font-weight: 700;
+            display: block;
+            margin-bottom: 8px;
         }
 
-        .tools {
-            margin-top: 20px;
+        .hint-text {
+            font-size: 0.85rem;
+            color: #94a3b8;
+            line-height: 1.6;
+        }
+
+        code {
+            color: #e0f7ff;
+            font-family: 'Share Tech Mono', monospace;
+        }
+
+        .tags {
             display: flex;
             justify-content: center;
             gap: 10px;
             flex-wrap: wrap;
+            margin-top: 18px;
         }
 
-        .tool-tag {
-            background: #0f172a;
-            border: 1px solid #334155;
-            border-radius: 999px;
+        .tag {
+            background: rgba(251, 191, 36, 0.07);
+            border: 1px solid rgba(251, 191, 36, 0.2);
+            border-radius: 20px;
             padding: 5px 14px;
-            font-size: 0.78rem;
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.75rem;
             color: #94a3b8;
-            font-family: monospace;
         }
     </style>
 </head>
 
 <body>
-    <div class="card">
-        <h1>🔬 Flag 7 — Read Between the Lines</h1>
-        <p class="subtitle">
-            Our server generated this log file automatically.<br>
-            Something slipped through the cracks — can you find it?
-        </p>
-        <a class="download-btn" href="syslog_export.txt" download="syslog_export.txt">
-            📄 Download Log File
-        </a>
-        <div class="hint">
-            <span>💡 Hint</span>
-            Not every line in a log file belongs there.
-            Read carefully — the flag won't be at the top or the bottom.
-            Use <code style="color:#f1f5f9">Ctrl+F</code> or grep to search for familiar patterns.
-        </div>
-        <div class="tools">
-            <span class="tool-tag">grep</span>
-            <span class="tool-tag">strings</span>
-            <span class="tool-tag">Ctrl+F</span>
-            <span class="tool-tag">notepad</span>
+    <canvas id="bg-canvas"></canvas>
+    <div class="container">
+        <div class="card">
+            <div class="eyebrow">// Log Forensics</div>
+            <div class="title">🔬 Read Between the Lines</div>
+            <p class="subtitle">Our server generated this log file automatically. Something slipped through the cracks —
+                can you find it before the trail goes cold?</p>
+            <a class="btn" href="syslog_export.txt" download="syslog_export.txt">📄 Download Log File</a>
+            <div class="hint-block">
+                <span class="hint-label">💡 Analyst Note</span>
+                <span class="hint-text">A log is a river of noise and necessity,
+                    and not every ripple is meant to be remembered.
+                    Some lines exist only to pass through,
+                    others to be found.</span>
+            </div>
+            <div class="tags">
+                <span class="tag">grep</span>
+                <span class="tag">strings</span>
+                <span class="tag">Ctrl+F</span>
+                <span class="tag">notepad</span>
+            </div>
         </div>
     </div>
+    <!-- Submit Strip -->
+    <div
+        style="max-width:580px;margin:18px auto 0;background:rgba(8,4,22,0.9);border:1px solid rgba(251,191,36,0.15);border-radius:12px;padding:18px;font-family:'Share Tech Mono',monospace;position:relative;z-index:2;">
+        <span
+            style="font-size:0.68rem;letter-spacing:3px;color:#4a5568;text-transform:uppercase;display:block;margin-bottom:10px;">//
+            Submit Flag 7</span>
+        <div style="display:flex;gap:8px;">
+            <input type="text" id="fi7" placeholder="ARTIMAS{...}" autocomplete="off" spellcheck="false"
+                style="flex:1;background:rgba(251,191,36,0.04);border:1px solid rgba(251,191,36,0.15);border-radius:6px;padding:10px 14px;color:white;font-family:'Share Tech Mono',monospace;font-size:0.82rem;outline:none;">
+            <button onclick="submitFlag7()"
+                style="background:linear-gradient(135deg,#fbbf24,#f59e0b);border:none;border-radius:6px;padding:10px 18px;color:black;font-family:'Exo 2',sans-serif;font-weight:700;font-size:0.8rem;letter-spacing:1px;text-transform:uppercase;cursor:pointer;">Submit</button>
+        </div>
+        <div id="fb7" style="margin-top:8px;font-size:0.75rem;min-height:1.1em;"></div>
+        <a href="../index.html"
+            style="display:inline-block;margin-top:12px;font-size:0.72rem;letter-spacing:2px;color:#4a5568;text-decoration:none;border:1px solid #1e293b;border-radius:6px;padding:6px 16px;">←
+            Return to Hub</a>
+    </div>
+    <script>
+        const canvas = document.getElementById('bg-canvas'), ctx = canvas.getContext('2d');
+        let w, h, p = []; function resize() { w = canvas.width = window.innerWidth; h = canvas.height = window.innerHeight; }
+        window.addEventListener('resize', resize); resize();
+        for (let i = 0; i < 50; i++)p.push({ x: Math.random() * w, y: Math.random() * h, vx: Math.random() * .4 - .2, vy: Math.random() * .4 - .2 });
+        function draw() { ctx.clearRect(0, 0, w, h); p.forEach(q => { q.x += q.vx; q.y += q.vy; if (q.x < 0) q.x = w; if (q.x > w) q.x = 0; if (q.y < 0) q.y = h; if (q.y > h) q.y = 0; ctx.beginPath(); ctx.arc(q.x, q.y, 1, 0, Math.PI * 2); ctx.fillStyle = 'rgba(251,191,36,0.18)'; ctx.fill(); }); requestAnimationFrame(draw); }
+        draw();
+        // ── Flag Submission ──
+        async function submitFlag7() {
+            const val = document.getElementById('fi7').value.trim();
+            const fb = document.getElementById('fb7');
+            if (!val) { fb.style.color = '#ff3e3e'; fb.textContent = 'Enter the flag first'; return; }
+            fb.style.color = '#00e5ff'; fb.textContent = 'Verifying...';
+            const res = await fetch('/api/scores/flag', {
+                method: 'POST', headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ answer: val })
+            }).then(r => r.json());
+            if (res.ok) {
+                fb.style.color = '#00ff88'; fb.textContent = '✅ CORRECT! FLAG 7 CAPTURED — Returning...';
+                setTimeout(() => { window.location.href = '/index.html'; }, 1200);
+            } else if (res.alreadySolved) {
+                fb.style.color = '#fbbf24'; fb.textContent = '⚡ Already captured — Returning...';
+                setTimeout(() => { window.location.href = '/index.html'; }, 1200);
+            } else { fb.style.color = '#ff3e3e'; fb.textContent = '⚠ Invalid flag — try again'; }
+        }
+        document.addEventListener('keydown', e => { if (e.key === 'Enter' && document.activeElement.id === 'fi7') submitFlag7(); });
+    </script>
 </body>
 
 </html>
