--- a/flag8/index.html
+++ b/flag8/index.html
@@ -2,133 +2,244 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flag 8 | ZIP Password Challenge</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>VAULT_08 | ARTIMAS CTF</title>
+    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Exo+2:wght@300;400;700&display=swap"
+        rel="stylesheet">
     <style>
-        * {
+        :root {
+            --neon-purple: #9333ea;
+            --dark-bg: #03010a;
+            --border: rgba(147, 51, 234, 0.3);
+        }
+
+        *,
+        *::before,
+        *::after {
             box-sizing: border-box;
             margin: 0;
             padding: 0;
         }
 
         body {
+            background: var(--dark-bg);
+            color: #e0f7ff;
+            font-family: 'Exo 2', sans-serif;
             min-height: 100vh;
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #0f172a;
-            font-family: 'Segoe UI', sans-serif;
-            color: #e2e8f0;
-            padding: 30px 16px;
+            overflow: hidden;
+            padding: 30px 20px;
+        }
+
+        #bg-canvas {
+            position: fixed;
+            inset: 0;
+            z-index: 0;
+        }
+
+        .container {
+            position: relative;
+            z-index: 2;
+            width: 100%;
+            max-width: 560px;
         }
 
         .card {
-            background: #1e293b;
-            border: 1px solid #334155;
+            background: rgba(10, 0, 18, 0.92);
+            border: 1px solid var(--border);
             border-radius: 14px;
-            padding: 48px 56px;
+            padding: 44px;
             text-align: center;
-            box-shadow: 0 8px 40px rgba(0, 0, 0, 0.5);
-            max-width: 540px;
-            width: 100%;
+            box-shadow: 0 0 50px rgba(147, 51, 234, 0.1);
+            backdrop-filter: blur(12px);
         }
 
-        h1 {
+        .eyebrow {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.7rem;
+            letter-spacing: 5px;
+            color: #4a5568;
+            text-transform: uppercase;
+            margin-bottom: 14px;
+        }
+
+        .title {
+            font-family: 'Share Tech Mono', monospace;
             font-size: 1.7rem;
-            color: #f1f5f9;
+            color: var(--neon-purple);
+            text-shadow: 0 0 12px rgba(147, 51, 234, 0.5);
             margin-bottom: 10px;
         }
 
         .subtitle {
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             color: #64748b;
-            margin-bottom: 34px;
             line-height: 1.6;
-        }
-
-        .download-btn {
-            display: inline-block;
-            background: #7e22ce;
-            color: #f3e8ff;
-            text-decoration: none;
-            border-radius: 8px;
-            padding: 12px 32px;
-            font-size: 0.95rem;
-            font-weight: 600;
             margin-bottom: 30px;
-            transition: background 0.2s;
         }
 
-        .download-btn:hover {
-            background: #9333ea;
+        .lock-icon {
+            font-size: 3.5rem;
+            margin-bottom: 10px;
+            filter: drop-shadow(0 0 10px rgba(147, 51, 234, 0.5));
         }
 
-        .hint {
-            background: #1a0a2e;
-            border-left: 3px solid #9333ea;
+        .btn {
+            display: inline-block;
+            background: transparent;
+            border: 1px solid rgba(147, 51, 234, 0.5);
+            border-radius: 6px;
+            padding: 13px 34px;
+            color: var(--neon-purple);
+            font-family: 'Exo 2', sans-serif;
+            font-size: 0.85rem;
+            font-weight: 700;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+            text-decoration: none;
+            margin-bottom: 28px;
+            transition: all .3s;
+        }
+
+        .btn:hover {
+            background: rgba(147, 51, 234, 0.08);
+            box-shadow: 0 0 16px rgba(147, 51, 234, 0.2);
+        }
+
+        .hint-block {
+            background: rgba(147, 51, 234, 0.04);
+            border-left: 3px solid rgba(147, 51, 234, 0.35);
             border-radius: 6px;
             padding: 14px 18px;
             text-align: left;
-            font-size: 0.85rem;
-            color: #d8b4fe;
-            line-height: 1.7;
         }
 
-        .hint span {
-            display: block;
-            font-size: 0.75rem;
+        .hint-label {
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.7rem;
+            letter-spacing: 3px;
+            color: rgba(147, 51, 234, .55);
             text-transform: uppercase;
-            letter-spacing: 0.1em;
-            color: #9333ea;
-            margin-bottom: 5px;
-            font-weight: 700;
+            display: block;
+            margin-bottom: 8px;
         }
 
-        .tools {
-            margin-top: 20px;
+        .hint-text {
+            font-size: 0.85rem;
+            color: #94a3b8;
+            line-height: 1.6;
+        }
+
+        code {
+            color: #d8b4fe;
+            font-family: 'Share Tech Mono', monospace;
+        }
+
+        .tags {
             display: flex;
             justify-content: center;
             gap: 10px;
             flex-wrap: wrap;
+            margin-top: 18px;
         }
 
-        .tool-tag {
-            background: #0f172a;
-            border: 1px solid #334155;
-            border-radius: 999px;
+        .tag {
+            background: rgba(147, 51, 234, 0.07);
+            border: 1px solid rgba(147, 51, 234, 0.2);
+            border-radius: 20px;
             padding: 5px 14px;
-            font-size: 0.78rem;
+            font-family: 'Share Tech Mono', monospace;
+            font-size: 0.75rem;
             color: #94a3b8;
-            font-family: monospace;
         }
     </style>
 </head>
 
 <body>
-    <div class="card">
-        <h1>🔒 Flag 8 — Break the Lock</h1>
-        <p class="subtitle">
-            Someone left behind an encrypted archive.<br>
-            The contents are locked — the password is out there somewhere.
-        </p>
-        <a class="download-btn" href="challenge.zip" download="challenge.zip">
-            📦 Download challenge.zip
-        </a>
-        <div class="hint">
-            <span>💡 Hint</span>
-            Passwords used in CTFs are often weak, short, or predictable.
-            Try common wordlists or think about the event name combined with a year.
-            Tools like <code style="color:#f3e8ff">John the Ripper</code> or
-            <code style="color:#f3e8ff">fcrackzip</code> can automate the cracking.
-        </div>
-        <div class="tools">
-            <span class="tool-tag">fcrackzip</span>
-            <span class="tool-tag">john + zip2john</span>
-            <span class="tool-tag">7-Zip</span>
-            <span class="tool-tag">hashcat</span>
+    <canvas id="bg-canvas"></canvas>
+    <div class="container">
+        <div class="card">
+            <div class="eyebrow">// Password Cracking</div>
+            <div class="lock-icon">🔒</div>
+            <div class="title">Break the Lock</div>
+            <p class="subtitle">Someone left behind an encrypted archive. The contents are locked — the password is out
+                there somewhere. Find it and crack it open.</p>
+            <a class="btn" href="challenge.zip" download="challenge.zip">📦 Download challenge.zip</a>
+            <div class="hint-block">
+                <span class="hint-label">💡 Analyst Note</span>
+                <span class="hint-text">In these trials of borrowed locks,
+                    the keys are rarely forged with care.
+                    They are short, forgetful things—
+                    names half-remembered, years clumsily appended,
+                    habits masquerading as secrets.
+
+                    Think like the hurried hand that set the password:
+                    a familiar word, an event, a date meant to be obvious
+                    only to the one who chose it.
+                    Let the machines chant the guesses for you,
+                    patient, tireless, unoffended by repetition.
+
+                    And when the lock finally yields,
+                    it will not be brilliance that opened it,
+                    but the quiet understanding
+                    that most secrets fail
+                    because their makers do.</span>
+            </div>
+            <div class="tags">
+                <span class="tag">fcrackzip</span>
+                <span class="tag">john + zip2john</span>
+                <span class="tag">7-Zip</span>
+                <span class="tag">hashcat</span>
+            </div>
         </div>
     </div>
+    <!-- Submit Strip -->
+    <div
+        style="max-width:560px;margin:18px auto 0;background:rgba(8,4,22,0.9);border:1px solid rgba(147,51,234,0.15);border-radius:12px;padding:18px;font-family:'Share Tech Mono',monospace;position:relative;z-index:2;">
+        <span
+            style="font-size:0.68rem;letter-spacing:3px;color:#4a5568;text-transform:uppercase;display:block;margin-bottom:10px;">//
+            Submit Flag 8</span>
+        <div style="display:flex;gap:8px;">
+            <input type="text" id="fi8" placeholder="ARTIMAS{...}" autocomplete="off" spellcheck="false"
+                style="flex:1;background:rgba(147,51,234,0.04);border:1px solid rgba(147,51,234,0.15);border-radius:6px;padding:10px 14px;color:white;font-family:'Share Tech Mono',monospace;font-size:0.82rem;outline:none;">
+            <button onclick="submitFlag8()"
+                style="background:linear-gradient(135deg,#9333ea,#7c3aed);border:none;border-radius:6px;padding:10px 18px;color:white;font-family:'Exo 2',sans-serif;font-weight:700;font-size:0.8rem;letter-spacing:1px;text-transform:uppercase;cursor:pointer;">Submit</button>
+        </div>
+        <div id="fb8" style="margin-top:8px;font-size:0.75rem;min-height:1.1em;"></div>
+        <a href="../index.html"
+            style="display:inline-block;margin-top:12px;font-size:0.72rem;letter-spacing:2px;color:#4a5568;text-decoration:none;border:1px solid #1e293b;border-radius:6px;padding:6px 16px;">←
+            Return to Hub</a>
+    </div>
+    <script>
+        const canvas = document.getElementById('bg-canvas'), ctx = canvas.getContext('2d');
+        let w, h, p = []; function resize() { w = canvas.width = window.innerWidth; h = canvas.height = window.innerHeight; }
+        window.addEventListener('resize', resize); resize();
+        for (let i = 0; i < 50; i++)p.push({ x: Math.random() * w, y: Math.random() * h, vx: Math.random() * .4 - .2, vy: Math.random() * .4 - .2 });
+        function draw() { ctx.clearRect(0, 0, w, h); p.forEach(q => { q.x += q.vx; q.y += q.vy; if (q.x < 0) q.x = w; if (q.x > w) q.x = 0; if (q.y < 0) q.y = h; if (q.y > h) q.y = 0; ctx.beginPath(); ctx.arc(q.x, q.y, 1, 0, Math.PI * 2); ctx.fillStyle = 'rgba(147,51,234,0.2)'; ctx.fill(); }); requestAnimationFrame(draw); }
+        draw();
+        // ── Flag Submission ──
+        async function submitFlag8() {
+            const val = document.getElementById('fi8').value.trim();
+            const fb = document.getElementById('fb8');
+            if (!val) { fb.style.color = '#ff3e3e'; fb.textContent = 'Enter the flag first'; return; }
+            fb.style.color = '#00e5ff'; fb.textContent = 'Verifying...';
+            const res = await fetch('/api/scores/flag', {
+                method: 'POST', headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ answer: val })
+            }).then(r => r.json());
+            if (res.ok) {
+                fb.style.color = '#00ff88'; fb.textContent = '✅ CORRECT! FLAG 8 CAPTURED — Returning...';
+                setTimeout(() => { window.location.href = '/index.html'; }, 1200);
+            } else if (res.alreadySolved) {
+                fb.style.color = '#fbbf24'; fb.textContent = '⚡ Already captured — Returning...';
+                setTimeout(() => { window.location.href = '/index.html'; }, 1200);
+            } else { fb.style.color = '#ff3e3e'; fb.textContent = '⚠ Invalid flag — try again'; }
+        }
+        document.addEventListener('keydown', e => { if (e.key === 'Enter' && document.activeElement.id === 'fi8') submitFlag8(); });
+    </script>
 </body>
 
 </html>
